--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -34,13 +34,14 @@ div[class*="highlight-"] {
     margin-bottom: 12px;
 }
 
+/* Tweak whitespace on the release history page */
 #release-history p {
-    margin-bottom: 0;
-    margin-top: 0;
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
 
 #release-history h3 {
-    margin-bottom: 6px;
+    margin-bottom: 12px;
 }
 
 #release-history ul {
@@ -53,6 +54,7 @@ div[class*="highlight-"] {
 
 #release-history h2 {
     margin-bottom: 12px;
+    margin-top: 24px;
 }
 
 .rst-content code {
