--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,5 +1,4 @@
 .wy-nav-content {
-    max-width: 51.5em;
     padding: 1em;
 }
 
@@ -7,16 +6,16 @@
     margin-bottom: 6px;
 }
 
-/* override table width restrictions */
+/* Allow table content to wrap around */
 .wy-table-responsive table th, .wy-table-responsive table td {
-    /* !important prevents the common CSS stylesheets from
-       overriding this as on RTD they are loaded after this stylesheet */
+    /* !important because RTD has conflicting stylesheets */
     white-space: normal !important;
-    padding: 6px !important;
+    padding: 8px 6px !important;
 }
 
-.wy-table-responsive {
-    overflow: visible !important;
+.wy-table-responsive table {
+    width: calc(100% + 3em);
+    margin-left: 20px !important;
 }
 
 .rst-content table.docutils td ol {
@@ -35,10 +34,7 @@ div[class*="highlight-"] {
     margin-bottom: 12px;
 }
 
-table {
-    margin-left: 20px !important;
-}
-
+/* Tweak whitespace on the release history page */
 #release-history p {
     margin-bottom: 0;
     margin-top: 0;
@@ -60,6 +56,8 @@ table {
     margin-bottom: 12px;
 }
 
+/* Reduce whitespace on the inline-code snippets and add softer corners */
 .rst-content code {
-    padding: 2px;
+    padding: 2px 3px;
+    border-radius: 3px;
 }
